@@ -1,3 +1,11 @@
+2011-06-06  Martin Robinson  <mrobinson@igalia.com>
+
+        Fix the GTK+ build by ensuring that the autogenerated sources
+        necessary for libWebCoreInternals are recorded in a predeclared
+        variable before assigning to BUILT_SOURCES.
+
+        * GNUmakefile.am: Predeclare libwebcoreinternals_built_sources.
+
 2011-06-06  Yong Li  <yoli@rim.com>
 
         Reviewed by Eric Seidel.
