@@ -1,3 +1,13 @@
+2011-06-06  Martin Robinson  <mrobinson@igalia.com>
+
+        Fix the GTK+ build by ensuring that the autogenerated sources
+        necessary for libWebCoreInternals are recorded in a predeclared
+        variable before assigning to BUILT_SOURCES.
+
+        * GNUmakefile.am: Assign libWebCoreInternals built sources to
+        libwebcoreinternals_built_sources before adding to the source list
+        and to BUILT_SOURCES.
+
 2011-06-06  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Fix the GTK+ build.
